# hpc-matrix-lib

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp  neural_network.cpp
benchmarks/: bench_matrix.cpp
include/: matrix.hpp
src/: cuda_operations.cu  hello.cu  matrix.cpp
